# cpp-linter-core

./: CMakeLists.txt
include/: linter.h
src/: linter.cpp  main.cpp
